# huskyholdem-bench

./: .gitmodules  Readme.md
backend-server/: Dockerfile  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-worker.txt  requirements.txt
backend-server/alembic/: env.py
backend-server/alembic/versions/: 19592c45b9f3_add_job_id_to_game_logs.py  1e23d44b7626_update_game_log_table_with_game_id.py  2192cd698d21_add_tag_field_to_leaderboard.py  32fe6e0b34d9_initial.py  3f0dc6de8f99_tag_for_2025.py  4e01ebd44c42_add_llm_batch_run_to_jobtype_enum.py  569abf0ec098_add_game_logs_table_for_replays.py  6041bbfa15a3_add_field_to_submission.py  839be08c2b55_add_is_public_to_game_logs.py  878593718358_add_tag_to_job.py  add_composite_index_job_id_is_public.py  aea902d1c3eb_add_is_verified_to_user_table.py  f910fa98f728_add_batch_llm_queue_table.py
backend-server/app/: main.py
backend-server/app/api/: endpoints.py
backend-server/app/api/routes/: admin.py  auth.py  docker.py  game.py  leaderboard.py  live.py  llm.py  profile.py  submission.py  user.py  utils.py
backend-server/app/config/: setting.py
backend-server/app/middleware/: auth.py
backend-server/app/models/: __init__.py  batch_llm.py  game.py  job.py  leaderboard.py  rabbit_message.py  submission.py  user.py
backend-server/app/service/cache/: redis.py
backend-server/app/service/db/: postgres.py  supabase.py  utils.py
backend-server/app/tests/: test_auth.py  test_leaderboard.py  test_redis.py  test_submission.py
backend-server/app/utils/: file.py
(+467 files in other folders)
